[package]
name = "celeste-maps-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
libsql = "0.3.5"
raylib = { version = "3.7" }
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
zip = "0.6.6"
